# isearch

./: .gitignore  CMakeLists.txt
cmake/modules/: isearch_deps.cmake
include/isearch/: buffer.h  cache.h  isearch.h  list.h  macros.h  node.h  query.h  string.h  uint64.h
src/: cache.c  isearch.c  main.c  node.c  query.c  string.c  uint64.c
